add square box to the html with javascript

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
      
         <h1>CAMPO MINATO</h1>
 
-            <div class="container">
+            <section class="container">
                 
-            </div>
+            </section>
 
 
         <script type="text/javascript" src="JS/script.js"></script>   
