added play button to generate grid

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <body>
      
         <h1>CAMPO MINATO</h1>
+        <button id="play">
+            play
+        </button>
 
             <section class="container">
                 
